# x86-Toy-OS

./: CMakeLists.txt  LICENSE  README.md  Toolchain-x86-elf.cmake
boot/: CMakeLists.txt  grub.cfg
lib/: CMakeLists.txt  video.cpp  video.h
src/: CMakeLists.txt  init.c  linker.ld  test_lambda.cpp
